[package]
name = "spacecraft_server_dojo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stellar-bit-core = { git="https://github.com/stellar-bit/core" }
futures = "0.3"
tokio = { version = "1.28", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = "0.19"
rand_chacha = { version = "0.3.1", features = ["serde", "serde1"] }
